src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is activated.</description>
        <inlineHelpText>Indicates if the order product is activated.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset created from this order product</description>
        <inlineHelpText>Asset created from this order product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets
            you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractAction__c</fullName>
        <description>The contract action where this order product is resulted from.</description>
        <inlineHelpText>The contract action where this order product is resulted from.</inlineHelpText>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract of the subscription that is created from this order product.</description>
        <inlineHelpText>The contract of the subscription that is created from this order product.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is contracted.</description>
        <inlineHelpText>Indicates if the order product is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>Controls the contracting behavior of an Order Product. &quot;Inherit&quot; uses the behavior of the parent Order. &quot;Contract Separately&quot; generates a separate Contract for
            the Order Product. &quot;No Contract&quot; skips the Order Product altogether during the contracting process.</description>
        <inlineHelpText>Controls the contracting behavior of an Order Product.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Contract Separately</fullName>
                </value>
                <value>
                    <fullName>Do Not Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <description>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</description>
        <inlineHelpText>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</inlineHelpText>
        <label>Segment Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The actual quantity of the product placed in the order.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>Quoted List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order product that this order product revises.</description>
        <inlineHelpText>References the order product that this order product revises.</inlineHelpText>
        <label>Revised Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Revised Order Product)</relationshipLabel>
        <relationshipName>RevisingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>The current state of the order product.</description>
        <inlineHelpText>Indicates the current state of the order product. It is defaulted to Draft when an order is created.</inlineHelpText>
        <label>Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__OrderProductStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Determines how the subscription on this line item is priced. Blank value means this line contains product that&apos;s not a subscription.</description>
        <inlineHelpText>Indicates how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionPricing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription created from this order product</description>
        <inlineHelpText>Subscription created from this order product</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>SubscriptionOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Estimated tax amount</description>
        <inlineHelpText>Estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date that this order product&apos;s related subscription was terminated</description>
        <inlineHelpText>Date that this order product&apos;s related subscription was terminated</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR(
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))),
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>